Bug 1609701 - [1.1] Ignore resuming of non-suspended windows. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D60274